baml_language/crates/baml_tests/snapshots/parser_speculative/baml_tests__parser_speculative__02_parser__expr_function.snap
---
source: target/debug/build/baml_tests-91bdee82f91f7b04/out/generated_tests.rs
expression: output
---
=== SYNTAX TREE ===
SOURCE_FILE
  CLASS_DEF
    WORD "class"
    WORD "JsonData"
    L_BRACE "{"
    FIELD
      WORD "field1"
      TYPE_EXPR " int"
        WORD "int"
    FIELD
      WORD "field2"
      TYPE_EXPR " int"
        WORD "int"
    R_BRACE "}"
  FUNCTION_DEF
    WORD "function"
    WORD "ProcessData"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER "data"
        WORD "data"
  WORD "JsonData"
  R_PAREN ")"
  ARROW "->"
  WORD "string"
  L_BRACE "{"
  WORD "let"
  WORD "result"
  EQUALS "="
  WORD "data"
  DOT "."
  WORD "field1"
  PLUS "+"
  WORD "data"
  DOT "."
  WORD "field2"
  WORD "if"
  WORD "result"
  GREATER ">"
  INTEGER "100"
  L_BRACE "{"
  WORD "return"
  QUOTE """
  WORD "high"
  QUOTE """
  R_BRACE "}"
  WORD "return"
  QUOTE """
  WORD "low"
  QUOTE """
  R_BRACE "}"

=== ERRORS ===
  Expected Expected type annotation (:), found Expected type annotation (:)
  Expected Expected RParen, found Word, found Expected RParen, found Word
  Expected Expected return type (->), found Expected return type (->)
  Expected Expected function body, found Expected function body
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
