baml_language/crates/baml_tests/snapshots/parser_speculative/baml_tests__parser_speculative__02_parser__llm_function.snap
---
source: target/debug/build/baml_tests-91bdee82f91f7b04/out/generated_tests.rs
expression: output
---
=== SYNTAX TREE ===
SOURCE_FILE
  FUNCTION_DEF
    WORD "function"
    WORD "ExtractData"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER "text"
        WORD "text"
  WORD "string"
  R_PAREN ")"
  ARROW "->"
  WORD "JsonData"
  L_BRACE "{"
  CLIENT_DEF "
  client GPT4"
    WORD "client"
    WORD "GPT4"
  WORD "prompt"
  HASH "#"
  QUOTE """
  WORD "Extract"
  WORD "structured"
  WORD "data"
  WORD "from"
  COLON ":"
  L_BRACE "{"
  L_BRACE "{"
  WORD "text"
  R_BRACE "}"
  R_BRACE "}"
  WORD "Return"
  WORD "as"
  WORD "JSON"
  DOT "."
  QUOTE """
  HASH "#"
  R_BRACE "}"

=== ERRORS ===
  Expected Expected type annotation (:), found Expected type annotation (:)
  Expected Expected RParen, found Word, found Expected RParen, found Word
  Expected Expected return type (->), found Expected return type (->)
  Expected Expected function body, found Expected function body
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected config block, found Expected config block
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
