baml_language/crates/baml_tests/snapshots/parser_speculative/baml_tests__parser_speculative__02_parser__mixed_functions.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "LLMAnalyze"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "text"
        COLON ":"
        TYPE_EXPR "string"
          WORD "string"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "Analysis"
      WORD "Analysis"
    LLM_FUNCTION_BODY
      L_BRACE "{"
      CLIENT_FIELD "client GPT4"
        KW_CLIENT "client"
        WORD "GPT4"
      PROMPT_FIELD
        WORD "prompt"
        RAW_STRING_LITERAL
          HASH "#"
          QUOTE """
          PROMPT_TEXT "Analyze the following text:"
            WORD "Analyze"
            WORD "the"
            WORD "following"
            WORD "text"
            COLON ":"
          TEMPLATE_INTERPOLATION "{{ text }}"
            L_BRACE "{"
            L_BRACE "{"
            WORD "text"
            R_BRACE "}"
            R_BRACE "}"
          PROMPT_TEXT "Return an Analysis object with sentiment and keywords."
            WORD "Return"
            WORD "an"
            WORD "Analysis"
            WORD "object"
            WORD "with"
            WORD "sentiment"
            WORD "and"
            WORD "keywords"
            DOT "."
          QUOTE """
          HASH "#"
      R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "Analysis"
    L_BRACE "{"
    FIELD
      WORD "sentiment"
      TYPE_EXPR "string"
        WORD "string"
    FIELD
      WORD "keywords"
      TYPE_EXPR "string[]"
        WORD "string"
        L_BRACKET "["
        R_BRACKET "]"
    FIELD
      WORD "score"
      TYPE_EXPR "float"
        WORD "float"
    R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "ProcessAnalysis"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "analysis"
        COLON ":"
        TYPE_EXPR "Analysis"
          WORD "Analysis"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN "let score"
            KW_LET "let"
            WORD "score"
          EQUALS "="
          PATH_EXPR "analysis.score"
            WORD "analysis"
            DOT "."
            WORD "score"
        IF_EXPR
          KW_IF "if"
          BINARY_EXPR "score > 0.8"
            WORD "score"
            GREATER ">"
            FLOAT_LITERAL "0.8"
          BLOCK_EXPR
            L_BRACE "{"
            RETURN_STMT
              KW_RETURN "return"
              BINARY_EXPR
                STRING_LITERAL "Very positive: "
                  QUOTE """
                  WORD "Very"
                  WORD "positive"
                  COLON ":"
                  QUOTE """
                PLUS "+"
                PATH_EXPR "analysis.sentiment"
                  WORD "analysis"
                  DOT "."
                  WORD "sentiment"
            R_BRACE "}"
          KW_ELSE "else"
          IF_EXPR
            KW_IF "if"
            BINARY_EXPR "score > 0.5"
              WORD "score"
              GREATER ">"
              FLOAT_LITERAL "0.5"
            BLOCK_EXPR
              L_BRACE "{"
              RETURN_STMT
                KW_RETURN "return"
                BINARY_EXPR
                  STRING_LITERAL "Positive: "
                    QUOTE """
                    WORD "Positive"
                    COLON ":"
                    QUOTE """
                  PLUS "+"
                  PATH_EXPR "analysis.sentiment"
                    WORD "analysis"
                    DOT "."
                    WORD "sentiment"
              R_BRACE "}"
            KW_ELSE "else"
            IF_EXPR
              KW_IF "if"
              BINARY_EXPR "score > 0.2"
                WORD "score"
                GREATER ">"
                FLOAT_LITERAL "0.2"
              BLOCK_EXPR
                L_BRACE "{"
                RETURN_STMT
                  KW_RETURN "return"
                  BINARY_EXPR
                    STRING_LITERAL "Neutral: "
                      QUOTE """
                      WORD "Neutral"
                      COLON ":"
                      QUOTE """
                    PLUS "+"
                    PATH_EXPR "analysis.sentiment"
                      WORD "analysis"
                      DOT "."
                      WORD "sentiment"
                R_BRACE "}"
              KW_ELSE "else"
              BLOCK_EXPR
                L_BRACE "{"
                RETURN_STMT
                  KW_RETURN "return"
                  BINARY_EXPR
                    STRING_LITERAL "Negative: "
                      QUOTE """
                      WORD "Negative"
                      COLON ":"
                      QUOTE """
                    PLUS "+"
                    PATH_EXPR "analysis.sentiment"
                      WORD "analysis"
                      DOT "."
                      WORD "sentiment"
                R_BRACE "}"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "ChainedProcess"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "input"
        COLON ":"
        TYPE_EXPR "string"
          WORD "string"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    LLM_FUNCTION_BODY
      L_BRACE "{"
      CLIENT_FIELD "client GPT4"
        KW_CLIENT "client"
        WORD "GPT4"
      PROMPT_FIELD
        WORD "prompt"
        RAW_STRING_LITERAL
          HASH "#"
          QUOTE """
          PROMPT_TEXT "Process this through multiple steps:
    1."
            WORD "Process"
            WORD "this"
            WORD "through"
            WORD "multiple"
            WORD "steps"
            COLON ":"
            INTEGER_LITERAL "1"
            DOT "."
          TEMPLATE_INTERPOLATION "{{ input }}"
            L_BRACE "{"
            L_BRACE "{"
            WORD "input"
            R_BRACE "}"
            R_BRACE "}"
          PROMPT_TEXT "2. Transform it
    3. Return result"
            INTEGER_LITERAL "2"
            DOT "."
            WORD "Transform"
            WORD "it"
            INTEGER_LITERAL "3"
            DOT "."
            WORD "Return"
            WORD "result"
          QUOTE """
          HASH "#"
      R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "SimpleCalc"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "a"
        COLON ":"
        TYPE_EXPR "int"
          WORD "int"
      COMMA ","
      PARAMETER
        WORD "b"
        COLON ":"
        TYPE_EXPR "int"
          WORD "int"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        RETURN_STMT
          KW_RETURN "return"
          BINARY_EXPR
            WORD "a"
            PLUS "+"
            BINARY_EXPR "b * 2"
              WORD "b"
              STAR "*"
              INTEGER_LITERAL "2"
        R_BRACE "}"

=== ERRORS ===
None
